tests/build/fail/widget/invalid_properties_item.rs
use zero_ui::core::widget2;

#[widget2($crate::widget)]
pub mod widget {
    properties! {
        {}
    }
}

fn main() {}
